log
Thu 21 Mar 2024 12:40:38 AM UTC: 
 tests:  0|5
total_score: 0/70
2cf1cc2
Thu 21 Mar 2024 12:47:04 AM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|5
total_score: 0/70
8d4e507
Thu 21 Mar 2024 12:47:56 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
9cef5bb
Thu 21 Mar 2024 12:51:06 AM UTC: 
 exercises.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:48:31: error: invalid application of ‘sizeof’ to incomplete type ‘List’
   48 |      L = (List*)malloc(sizeof(List));
      |                               ^~~~
exercises.c:50:17: error: passing argument 2 of ‘pushBack’ makes pointer from integer without a cast [-Werror=int-conversion]
   50 |      pushBack(L,dato);
      |                 ^~~~
      |                 |
      |                 int
In file included from exercises.c:6,
                 from test.c:5:
arraylist.h:20:30: note: expected ‘void *’ but argument is of type ‘int’
   20 | void pushBack(List *L, void *dato);
      |                        ~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
9b19454
Thu 21 Mar 2024 12:54:27 AM UTC: 
 exercises.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
0c95647
